# data-science-first

./: README.md
chapter_04/: CaseStudy_4.1_00-01.py  CaseStudy_4.1_00-02.py  CaseStudy_4.1_00_DataPrep.ipynb  CaseStudy_4.1_01-03.py  CaseStudy_4.1_01_ML_Baseline.ipynb  CaseStudy_4.1_02-03b.py  CaseStudy_4.1_02_ML_TFIDF.ipynb  CaseStudy_4.1_03-04_BERT.py  CaseStudy_4.1_03-04b_CLS_TOKEN.py  CaseStudy_4.1_03-04c_SENTENCE_TRANSFORMERS.py  CaseStudy_4.1_03-04d_INSTRUCT.py  CaseStudy_4.1_03-05.py  CaseStudy_4.1_03-06.py  CaseStudy_4.1_03_ML_Embeddings.ipynb  README.md  (+8 more)
chapter_07/: CaseStudy_7.1_01-01.py  CaseStudy_7.1_01-02.py  CaseStudy_7.1_01-03.py  CaseStudy_7.1_01-04.py  CaseStudy_7.1_01-05.py  CaseStudy_7.1_01-06.py  CaseStudy_7.1_01-07.py  CaseStudy_7.1_01-07b.py  CaseStudy_7.1_01-08.py  CaseStudy_7.1_01_Labelling.ipynb  CaseStudy_7.2_01-01.py  CaseStudy_7.2_01-02.py  CaseStudy_7.2_01-03.py  CaseStudy_7.2_01-04.py  CaseStudy_7.2_01_Features.ipynb  README.md  analyse_essays.py  analyse_results.py  claude_feature_funcs.py  essay_features.py  naics.py  process_json_files.py  pyproject.toml
chapter_08/: CaseStudy_8.1_01.py  CaseStudy_8.1_01_Complaints.ipynb  CaseStudy_8.1_02.py  CaseStudy_8.1_03.py  CaseStudy_8.1_04.py  CaseStudy_8.1_05.py  CaseStudy_8.1_06.py  CaseStudy_8.2_01.py  CaseStudy_8.2_01_Idioms.ipynb  CaseStudy_8.2_02.py  CaseStudy_8.2_02_BERT.ipynb  CaseStudy_8.2_03.py  CaseStudy_8.2_04.py  CaseStudy_8.2_05.py  CaseStudy_8.2_06.py  CaseStudy_8.2_07.py  CaseStudy_8.2_08.py  README.md  generate_complaint_emails.py  generate_embeddings.py  pyproject.toml
(+38 files in other folders)
