[project]
name = "chapter-07"
version = "0.1.0"
description = "Requirements to run the examples for chapter 7"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.6",
    "jupyter>=1.1.1",
    "langchain>=1.2.11",
    "langchain-google-genai>=4.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "tabulate>=0.10.0",
    "typing>=3.10.0.0",
]
